kubernetes/main/apps/self-hosted/issueboss/app/grpcroute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/grpcroute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: issueboss
spec:
  hostnames:
    - issueboss.zinn.ca
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: grpc
  rules:
    - backendRefs:
        - name: issueboss
          port: 8443
